Update .gitignore: Track .terraform.lock.hcl files
- Remove .terraform.lock.hcl from ignore list (best practice)
- Lock files should be committed for version consistency

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Local .terraform directories
 **/.terraform/*
+# Note: .terraform.lock.hcl should be committed (removed from ignore list)
 
 # Terraform state files
 *.tfstate
